--- a/app/assets/stylesheets/ie.css.scss
+++ b/app/assets/stylesheets/ie.css.scss
@@ -9,17 +9,17 @@
   }
 
  .flexslider .slides > li{display:block}
- 
+
 
   #search input {
     width: 200px;
 }
-  
- .magnifier:after{display:none} 
+
+ .magnifier:after{display:none}
   .magnifier:after:hover{display:block}
    .magnifier{filter:alpha(opacity=100)}
   .magnifier:hover{filter:alpha(opacity=70)}
-     
+
   #advanced span.trigger strong{filter:alpha(opacity=0);}
 #advanced.closed span.trigger strong{filter:alpha(opacity=100);}
 
@@ -32,8 +32,8 @@
 
 
 	.flexslider .slides > li {
-		display:none;	
-	}	
+		display:none;
+	}
 
  .flexslider .slides img {
 max-width: 100%;width:100%
@@ -74,11 +74,11 @@ text-decoration:none;
 }
  .flex-direction-nav a.flex-next {
 text-align:right;
-background:url(../img/next.png) no-repeat 50% 50% #181818
+background:image-url("next.png") no-repeat 50% 50% #181818
 }
  .flex-direction-nav a.flex-prev {
 text-align:left;
-background:url(../img/prev.png) no-repeat 50% 50% #181818
+background:image-url("prev.png") no-repeat 50% 50% #181818
 }
  #responsiveFlag {
 font-size:0;
