--- a/app/assets/stylesheets/kwicks-slider.css.scss
+++ b/app/assets/stylesheets/kwicks-slider.css.scss
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 
+$theme_color: #5073F2;
+
 /* FlexSlider Necessary Styles
 *********************************/
 
@@ -54,7 +56,7 @@ html[xmlns] .slides {
 	display: block;
 }
 .flexslider, .flex-container {
-	position: relative;	
+	position: relative;
 
 }
 
@@ -64,11 +66,11 @@ html[xmlns] .slides {
 /* Suggested container for "Slide" animation setups. Can replace this with your own, if you wish */
 .flex-container {zoom: 1; position: relative;}
 
-.flexslider .slides > li {	
+.flexslider .slides > li {
 	width:20%;
 	overflow:hidden;
 	position:relative;
-	
+
 }
 .flexslider .slides > li .flex-caption {
 	font-family: 'Dorsa', sans-serif;
@@ -118,15 +120,15 @@ html[xmlns] .slides {
 
 @media handheld, only screen and (min-width:1300px) {
 	.flexslider .slides > li {
-		display:block;	
-	}	
+		display:block;
+	}
 	#responsiveFlag{display:block;}
 }
 
  @media only screen and (max-width: 1299px) {
 .flexslider .slides > li {
 	opacity:1
-}	 
+}
  .flexslider .slides img {
 max-width: 100%;width:100%
 }
@@ -167,13 +169,13 @@ text-decoration:none;
 }
  .flex-direction-nav a.flex-next {
 text-align:right;
-background:url(../img/next.png) no-repeat 50% 50% #181818
+background:image-url("next.png") no-repeat 50% 50% #181818;
 }
  .flex-direction-nav a.flex-prev {
 text-align:left;
-background:url(../img/prev.png) no-repeat 50% 50% #181818
+background:image-url("prev.png") no-repeat 50% 50% #181818;
 }
-.flex-direction-nav a:hover{background-color:#e85356}
+.flex-direction-nav a:hover{background-color:$theme_color}
 
 
  #responsiveFlag {
