--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,6 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Dorsa);
 @charset "utf-8";
 /* CSS Document */
+
+$theme_color: #5073F2;
+
 a[href^="tel:"] {
   color: inherit;
   text-decoration: none;
@@ -30,7 +33,7 @@ a[href^="tel:"] {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(../img/spinner.gif) 50% 50% no-repeat #000000;
+  background:image-url("spinner.gif") 50% 50% no-repeat #000000;
 }
 .preloader {
   background: url(../img/loader.gif) center center no-repeat;
@@ -131,7 +134,7 @@ header {
   position: absolute;
   width: 9px;
   height: 6px;
-  background: url(../img/indicator1.png) no-repeat 0 0;
+  background:image-url("indicator1.png") no-repeat 0 0;
   left: 50%;
   bottom: 21px;
   margin-left: -5px;
@@ -147,7 +150,7 @@ header {
 .nav-collapse_ .nav > li > a:hover,
 .nav-collapse_ .nav > li.active > a,
 .nav-collapse_ .nav > li.active > a:hover {
-  background: #e85356;
+  background: $theme_color;
   color: #ffffff;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -185,7 +188,7 @@ header {
 .nav-collapse_ .nav > li > ul li.sfHover > a {
   text-decoration: none;
   color: #ffffff;
-  background: #e85356;
+  background: $theme_color;
 }
 .nav-collapse_ .nav ul .sf-sub-indicator {
   display: none;
@@ -266,14 +269,14 @@ p {
   padding: 0 0 40px;
 }
 .bg-content {
-  background: url(../img/bg-content.jpg) 50% 50%;
+  background: image-url("bg-content.jpg") 50% 50%;
 }
 .block-slogan {
   overflow: hidden;
   padding-bottom: 44px;
 }
 .block-slogan h2:first-letter {
-  color: #e85356;
+  color: $theme_color;
   font-weight: normal;
 }
 .block-slogan h2 {
@@ -427,10 +430,10 @@ p {
 }
 .list.extra1 a:hover,
 .list.extra2 a:hover {
-  color: #e85356;
+  color: $theme_color;
 }
 .list li a {
-  color: #e85356;
+  color: $theme_color;
   display: inline-block;
 }
 .list li a:hover {
@@ -589,7 +592,7 @@ p {
 }
 .mail-1 {
   text-decoration: underline;
-  color: #e85356;
+  color: $theme_color;
 }
 .mail-1:hover {
   text-decoration: none;
@@ -702,7 +705,7 @@ p {
 /*----------- buttons & links--------------*/
 .btn-1 {
   color: #ffffff;
-  background: #e85356;
+  background: $theme_color;
   padding: 5px 14px;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -754,7 +757,7 @@ p {
   overflow: hidden;
 }
 .box-404 h2 {
-  color: #e85356;
+  color: $theme_color;
   font-size: 80px;
   line-height: 84px;
   font-weight: normal;
@@ -812,7 +815,7 @@ footer {
   padding-top: 6px;
 }
 .privacy a {
-  color: #e85356;
+  color: $theme_color;
 }
 .list-social {
   list-style: none outside none;
@@ -987,7 +990,7 @@ footer {
   .navbar_ .btn {
     display: inline-block;
     float: right;
-    background: #e85356;
+    background: $theme_color;
     padding: 18px 0 20px;
     text-decoration: none;
     margin: 0;
@@ -1070,7 +1073,7 @@ footer {
   .nav-collapse_ .nav > li.active > a:hover {
     text-decoration: none;
     color: #ffffff;
-    background: #e85356;
+    background: $theme_color;
   }
   .sub-menu > a {
     position: relative;
